# using_xtensor

./: .gitignore  README.md
broadcasting/: CMakeLists.txt
broadcasting/src/: broadcasting.cpp
firstexample/: CMakeLists.txt
firstexample/src/: firstexample.cpp
histogram/: CMakeLists.txt  main.cpp
index/: CMakeLists.txt
index/src/: index_access.cpp
reductions/: CMakeLists.txt  main.cpp
reshape/: CMakeLists.txt
reshape/src/: reshape.cpp
views/: CMakeLists.txt
views/src/: views.cpp
